# Warp12

./: .env.example  .firebaserc  .gitattributes  .gitignore  .gitmodules  .nxignore  AGENTS.md  FEDERATION.md  MODULE-ANALYSIS-STATUS.md  README.md  RULES.aux  RULES.html  RULES.md  RULES.out  RULES.tex  bench-2p-points-500a.json  bench-2p-points-500b.json  firebase.json  firestore-match-logs.rules  firestore.indexes.json  firestore.rules  nx.json  package.json  run-epsilon-only-fixed.sh  run-epsilon-only.sh  test-draft-simple.ts  test-epsilon-w15.ts  tsconfig.base.json  tsconfig.json  tsconfig.nocustom.json  twa-manifest.json
.firebase/: hosting.YXBwcy9XYXJwMTIvZGlzdA.cache
apps/Warp12/src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/Warp12/src-tauri/capabilities/: default.json
apps/Warp12/src-tauri/icons/: icon.icns
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/: Cargo.toml  build.rs
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/android/: build.gradle.kts  consumer-rules.pro
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/android/src/main/java/org/digitaldefiance/warp/achievements/: AchievementsPlugin.kt
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/ios/: Package.swift
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/ios/Sources/: AchievementsPlugin.swift
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/permissions/: default.toml
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/permissions/autogenerated/: reference.md
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/permissions/autogenerated/commands/: progress.toml  show_ui.toml
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/permissions/schemas/: schema.json
apps/Warp12/src-tauri/plugins/tauri-plugin-warp-achievements/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
apps/Warp12/src-tauri/src/: lib.rs  oauth_server.rs
docs/: .gitignore  BINARY-LOG-DECODER.md  BINARY-LOG-IMPLEMENTATION.md  BINARY-MATCH-LOGS.md  BUILD-VERIFICATION.md  CNAME  DEPLOYMENT-CHECKLIST.md  DEV-CONSOLE.md  Gemfile  HYSTERESIS-IMPLEMENTATION.md  INTEGRATION-COMPLETE-SUMMARY.md  LEADERBOARD-ELO-AUDIT.md  LEADERBOARD-OPENSKILL-COMPLETE.md  LUCK-SKILL-READY.md  MIGRATION-COMPLETE.md  MODULE-ANALYSIS.md  MODULE-MATRIX-RERUN.md  NEXT-STEPS-ANALYSIS.md  OPENSKILL-MIGRATION-COMPLETE.md  OPENSKILL-TEI-PROGRESS-SUMMARY.md  _config.yml  (+73 more)
(+2714 files in other folders)
