[package]
name = "warp12"
version = "0.10.65"
description = "Warp 12 — Federation-style Mexican Train dominoes"
authors = ["Digital Defiance"]
license = "MIT"
repository = "https://github.com/Digital-Defiance/Warp12"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-warp-achievements = { path = "plugins/tauri-plugin-warp-achievements" }

# Native save dialog — desktop only (WKWebView ignores <a download>).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = "0.15"
