[package]
name = "tauri-plugin-warp-achievements"
version = "0.1.0"
description = "Play Games Services + Game Center achievements for Warp"
authors = ["Digital Defiance"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-warp-achievements"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3" }
thiserror = "2"

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2.11.3", features = ["wry"] }
